# myfirstclap

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/hello/: Cargo.toml
crates/hello/src/: lib.rs
crates/serve/: Cargo.toml
crates/serve/src/: hello.rs
crates/version/: Cargo.toml  build.rs
crates/version/src/: lib.rs
src/: main.rs
