[package]
name = "myfirstclap"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/cli",
    "crates/version",
    "crates/serve",
    "crates/hello",
]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
vergen-git2 = { version = "1.0.5", features = ["build", "cargo", "rustc", "si"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dependencies]
cli = { path = "crates/cli" }
