[workspace]
members = [
    "crates/cli",
    "crates/version",
    "crates/serve",
]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
hyper = { version = "1.6", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
vergen-git2 = { version = "1.0.5", features = ["build", "cargo", "rustc", "si"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bytes = "1.10"
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = { version = "0.1.3", features = ["full"] }

#clap_mangen = "0.2.26" # for man pages