[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myfirstclap"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
version = { path = "../version" }
serve = { path = "../serve" }
pretty_env_logger = { workspace = true }