[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myfirstclap"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
serve = { path = "../serve" }
version = { path = "../version" }

#clap_mangen = { workspace = true } # for man pages