[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }